another attempt at fixing tinymce autoresize, and show gapfills in preview
now the autoresize tries to wait until the tab containing the editor is
open

--- a/editor/static/css/editor.css
+++ b/editor/static/css/editor.css
@@ -98,6 +98,14 @@ body.mce-fullscreen .mce-fullscreen {
     color: red;
 }
 
+gapfill {
+	border: 1px solid #888;
+	padding: 0.1em 0.3em;
+	color: #888;
+	border-radius: 2px;
+	display: inline-block;
+}
+
 /*
 #name-header {
     padding: 0;
